@@ -1,3 +1,9 @@
+2007-01-11  Akim Demaille  <demaille@gostai.com>
+
+	urbi -> libport
+	* fwd.hh, lockable.hh, semaphore.hh, semaphore.hxx,
+	* singleton-ptr.hh, thread.hh: Move these in the libport namespace.
+
 2006-12-27  Akim Demaille  <akim.demaille@free.fr>
 
 	ref-pt: const copy
